[package]
name = "limn"
version = "0.4.0"
authors = ["manshanko <manshanko@wartide.net>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/manshanko/limn"

[profile.release]
opt-level = "s"

[dependencies]
steam_find = { git = "https://github.com/manshanko/steam_find", rev = "8825430236d2bf3bfd118029fbe94ca0b7888674" }
byteorder = "1.4.3"
leb128 = "0.2.5"
libloading = "0.7.3"
